<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/theme_title"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="theme_mode"
            app:title="@string/theme_mode_title"
            app:summary="@string/theme_mode_summary"
            app:entries="@array/theme_mode_entries"
            app:entryValues="@array/theme_mode_values"
            app:defaultValue="system"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="color_scheme_light"
            app:title="@string/color_scheme_light_title"
            app:summary="@string/color_scheme_light_summary"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="color_scheme_dark"
            app:title="@string/color_scheme_dark_title"
            app:summary="@string/color_scheme_dark_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/panel_transparency_title"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            app:key="button_bg_inactive_alpha"
            app:title="@string/termux_button_bg_inactive_alpha_title"
            app:defaultValue="5"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            app:key="button_bg_active_alpha"
            app:title="@string/termux_button_bg_active_alpha_title"
            app:defaultValue="12"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
